[tool.poetry]
name = "titleminer"
version = "0.1.0"
description = ""
authors = ["Kristof Gilicze <giliczekristof@gmail.com>"]

[tool.poetry.scripts]
titleminer = "titleminer.cli:root"

[tool.poetry.dependencies]
python = "3.10.*"
Beautiful = "Soup"
tabulate = "^0.9.0"
click = "^8.1.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
wordcloud = "^1.8.2"
pyinstaller = "^5.7.0"
openai = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
